fix menu title overflow

--- a/src/styles/common.less
+++ b/src/styles/common.less
@@ -54,8 +54,11 @@
   .mu-item {
     height: 48 * @pr;
     font-weight: bold;
-    .mu-list-item-title {
-      text-overflow: unset;
+    .mu-item-title,
+    .mu-item-sub-title,
+    .mu-list-item-title,
+    .mu-list-item-sub-title {
+      text-overflow: inherit;
     }
   }
 }
